// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`header import package dispose assets dispose material assets 
          1.load BoxTextured wdb asset w1;
          2.drag w1 to scene tree to be gameObject g1;
          3.export;
          4.import;

          g1->material->select material group widget should have only one wdb material
           1`] = `
<article
  className="wonder-inspector-material"
>
  <div
    className="inspector-item"
  >
    <div
      className="item-header"
    >
      Material
    </div>
    <div
      className="item-content"
    >
      <div
        className="inspector-select"
      >
        <div
          className="select-name"
        >
          Texture
        </div>
        <div
          className="select-img"
          onClick={[Function]}
        >
          <img
            src="./public/img/select.png"
          />
        </div>
      </div>
    </div>
  </div>
  <div
    className="select-component-content"
  >
    <div
      className="select-component-item"
    >
      <div
        className="select-item-header"
      >
        Material
      </div>
      <div
        className="select-item-body"
      >
        <div
          className="select-item-content select-item-active"
          onClick={[Function]}
        >
          Texture
        </div>
        <div
          className="select-item-content"
          onClick={[Function]}
        >
          Wonder-Default-Basic-Material
        </div>
        <div
          className="select-item-content"
          onClick={[Function]}
        >
          Wonder-Default-Light-Material
        </div>
      </div>
    </div>
    <div
      className="select-component-bg"
      onClick={[Function]}
    />
  </div>
  <div
    className="material-value"
  >
    <article
      className="inspector-item"
    >
      <div
        className="item-header"
      >
        <span
          className=""
        >
          Type
        </span>
      </div>
      <div
        className="item-content"
      >
        <select
          onChange={[Function]}
          value="1"
        >
          <option
            value="0"
          >
            basic_material
          </option>
          <option
            value="1"
          >
            light_material
          </option>
        </select>
      </div>
    </article>
    <div
      className=""
    >
      <article
        className="wonder-light-material"
      >
        <article
          className="inspector-item"
        >
          <div
            className="item-header"
          >
            Diffcuse color
          </div>
          <div
            className="item-content item-color"
          >
            <div
              className="color-hex"
              onClick={[Function]}
              style={
                Object {
                  "background": "#ffffff",
                }
              }
            />
            <div
              className="color-select"
              onClick={[Function]}
            >
              <img
                src="./public/img/color.png"
              />
            </div>
          </div>
        </article>
        <article
          className="inspector-item"
        >
          <div
            className="item-header"
          >
            Diffuse map
          </div>
          <div
            className="item-content item-texture"
          >
            <div
              className="texture-img"
              onClick={[Function]}
              style={
                Object {
                  "opacity": "1",
                }
              }
            >
              <div
                className="img-dragBg"
                onDragEnter={[Function]}
                onDragLeave={[Function]}
                onDragOver={[Function]}
                onDrop={[Function]}
              />
              <img
                src="object_url1"
              />
            </div>
            <button
              className="texture-remove"
              onClick={[Function]}
            >
              Remove
            </button>
          </div>
        </article>
        <article
          className="inspector-item wonder-float-input"
        >
          <div
            className="item-header component-label"
            onMouseDown={[Function]}
            onMouseMove={[Function]}
            onMouseUp={[Function]}
          >
            Shininess
          </div>
          <div
            className="item-content"
          >
            <input
              className="input-component float-input"
              onBlur={[Function]}
              onChange={[Function]}
              type="text"
              value="32"
            />
          </div>
        </article>
      </article>
    </div>
  </div>
</article>
`;

exports[`header import package dispose assets dispose wdb assets dispose geometry assets 
          1.load BoxTextured wdb asset w1;
          2.drag w1 to scene tree to be gameObject g1;
          3.export;
          4.import;


          g1->geometry->select geometry group widget should have only one wdb geometry and be using it
           1`] = `
<article
  className="wonder-inspector-geometry"
>
  <div
    className="inspector-item"
  >
    <div
      className="item-header"
    >
      Geometry
    </div>
    <div
      className="item-content"
    >
      <div
        className="inspector-select"
      >
        <div
          className="select-name"
        >
          Mesh
        </div>
        <div
          className="select-img"
          onClick={[Function]}
        >
          <img
            src="./public/img/select.png"
          />
        </div>
      </div>
    </div>
  </div>
  <div
    className="select-component-content"
  >
    <div
      className="select-component-item"
    >
      <div
        className="select-item-header"
      >
        Geometry
      </div>
      <div
        className="select-item-body"
      >
        <div
          className="select-item-content select-item-active"
          onClick={[Function]}
        >
          Mesh
        </div>
        <div
          className="select-item-content"
          onClick={[Function]}
        >
          Wonder-Default-Cube
        </div>
        <div
          className="select-item-content"
          onClick={[Function]}
        >
          Wonder-Default-Sphere
        </div>
      </div>
    </div>
    <div
      className="select-component-bg"
      onClick={[Function]}
    />
  </div>
</article>
`;

exports[`header import package test geometry 
          1.export;
          2.import;

          select geometry group widget should have only default geometrys
           1`] = `
<article
  className="wonder-inspector-geometry"
>
  <div
    className="inspector-item"
  >
    <div
      className="item-header"
    >
      Geometry
    </div>
    <div
      className="item-content"
    >
      <div
        className="inspector-select"
      >
        <div
          className="select-name"
        >
          Wonder-Default-Cube
        </div>
        <div
          className="select-img"
          onClick={[Function]}
        >
          <img
            src="./public/img/select.png"
          />
        </div>
      </div>
    </div>
  </div>
  <div
    className="select-component-content"
  >
    <div
      className="select-component-item"
    >
      <div
        className="select-item-header"
      >
        Geometry
      </div>
      <div
        className="select-item-body"
      >
        <div
          className="select-item-content select-item-active"
          onClick={[Function]}
        >
          Wonder-Default-Cube
        </div>
        <div
          className="select-item-content"
          onClick={[Function]}
        >
          Wonder-Default-Sphere
        </div>
      </div>
    </div>
    <div
      className="select-component-bg"
      onClick={[Function]}
    />
  </div>
</article>
`;

exports[`header import package test geometry test with wdb assets relate wdb asset gameObjects with default geometrys 
                  1.load cube wdb asset w1(with default cube geometry);
                  1.load cube wdb asset w2(with default cube geometry);
                  2.export;
                  3.import;
                  4.drag w1 to scene tree to be gameObject g1;
                  5.drag w2 to scene tree to be gameObject g2;
                   g1->geometry->select geometry group widget should only have default geometrys and be using default cube geometry 1`] = `
<article
  className="wonder-inspector-geometry"
>
  <div
    className="inspector-item"
  >
    <div
      className="item-header"
    >
      Geometry
    </div>
    <div
      className="item-content"
    >
      <div
        className="inspector-select"
      >
        <div
          className="select-name"
        >
          Wonder-Default-Cube
        </div>
        <div
          className="select-img"
          onClick={[Function]}
        >
          <img
            src="./public/img/select.png"
          />
        </div>
      </div>
    </div>
  </div>
  <div
    className="select-component-content"
  >
    <div
      className="select-component-item"
    >
      <div
        className="select-item-header"
      >
        Geometry
      </div>
      <div
        className="select-item-body"
      >
        <div
          className="select-item-content select-item-active"
          onClick={[Function]}
        >
          Wonder-Default-Cube
        </div>
        <div
          className="select-item-content"
          onClick={[Function]}
        >
          Wonder-Default-Sphere
        </div>
      </div>
    </div>
    <div
      className="select-component-bg"
      onClick={[Function]}
    />
  </div>
</article>
`;

exports[`header import package test geometry test with wdb assets relate wdb asset gameObjects with default geometrys 
                  1.load cube wdb asset w1(with default cube geometry);
                  1.load cube wdb asset w2(with default cube geometry);
                  2.export;
                  3.import;
                  4.drag w1 to scene tree to be gameObject g1;
                  5.drag w2 to scene tree to be gameObject g2;
                   g2->geometry->select geometry group widget should only have default geometrys and be using default cube geometry 1`] = `
<article
  className="wonder-inspector-geometry"
>
  <div
    className="inspector-item"
  >
    <div
      className="item-header"
    >
      Geometry
    </div>
    <div
      className="item-content"
    >
      <div
        className="inspector-select"
      >
        <div
          className="select-name"
        >
          Wonder-Default-Cube
        </div>
        <div
          className="select-img"
          onClick={[Function]}
        >
          <img
            src="./public/img/select.png"
          />
        </div>
      </div>
    </div>
  </div>
  <div
    className="select-component-content"
  >
    <div
      className="select-component-item"
    >
      <div
        className="select-item-header"
      >
        Geometry
      </div>
      <div
        className="select-item-body"
      >
        <div
          className="select-item-content select-item-active"
          onClick={[Function]}
        >
          Wonder-Default-Cube
        </div>
        <div
          className="select-item-content"
          onClick={[Function]}
        >
          Wonder-Default-Sphere
        </div>
      </div>
    </div>
    <div
      className="select-component-bg"
      onClick={[Function]}
    />
  </div>
</article>
`;

exports[`header import package test geometry test with wdb assets relate wdb asset gameObjects with default geometrys 
               1.load cube wdb asset w1(with default cube geometry);
               2.export;
               3.import;
               4.drag w1 to scene tree to be gameObject g1;


               g1->geometry->select geometry group widget should only have default geometrys and be using default cube geometry
                1`] = `
<article
  className="wonder-inspector-geometry"
>
  <div
    className="inspector-item"
  >
    <div
      className="item-header"
    >
      Geometry
    </div>
    <div
      className="item-content"
    >
      <div
        className="inspector-select"
      >
        <div
          className="select-name"
        >
          Wonder-Default-Cube
        </div>
        <div
          className="select-img"
          onClick={[Function]}
        >
          <img
            src="./public/img/select.png"
          />
        </div>
      </div>
    </div>
  </div>
  <div
    className="select-component-content"
  >
    <div
      className="select-component-item"
    >
      <div
        className="select-item-header"
      >
        Geometry
      </div>
      <div
        className="select-item-body"
      >
        <div
          className="select-item-content select-item-active"
          onClick={[Function]}
        >
          Wonder-Default-Cube
        </div>
        <div
          className="select-item-content"
          onClick={[Function]}
        >
          Wonder-Default-Sphere
        </div>
      </div>
    </div>
    <div
      className="select-component-bg"
      onClick={[Function]}
    />
  </div>
</article>
`;

exports[`header import package test import assets test import material assets fix bug 
          1.add material asset m1;
          2.export;
          3.import;
          4.change scecne tree gameObject->material component to m1;
          5.change m1->type to BasicMaterial
          6.change m1->type to LightMaterial

          MaterialInspector should be LightMaterial
           1`] = `
<article
  className="wonder-inspector-component"
>
  <article
    className="wonder-inspector-assetTree"
  >
    <article
      className="wonder-material-inspector"
    >
      <h1>
        Material
      </h1>
      <hr />
      <article
        className="inspector-item"
      >
        <div
          className="item-header"
        >
          <span
            className="component-label"
          >
            Name
          </span>
        </div>
        <div
          className="item-content"
        >
          <input
            className="input-component float-input"
            onBlur={[Function]}
            onChange={[Function]}
            type="text"
            value="New Material"
          />
        </div>
      </article>
      <article
        className="inspector-item"
      >
        <div
          className="item-header"
        >
          <span
            className=""
          >
            Type
          </span>
        </div>
        <div
          className="item-content"
        >
          <select
            onChange={[Function]}
            value="1"
          >
            <option
              value="0"
            >
              basic_material
            </option>
            <option
              value="1"
            >
              light_material
            </option>
          </select>
        </div>
      </article>
      <article
        className="wonder-light-material"
      >
        <article
          className="inspector-item"
        >
          <div
            className="item-header"
          >
            Diffcuse color
          </div>
          <div
            className="item-content item-color"
          >
            <div
              className="color-hex"
              onClick={[Function]}
              style={
                Object {
                  "background": "#ffffff",
                }
              }
            />
            <div
              className="color-select"
              onClick={[Function]}
            >
              <img
                src="./public/img/color.png"
              />
            </div>
          </div>
        </article>
        <article
          className="inspector-item"
        >
          <div
            className="item-header"
          >
            Diffuse map
          </div>
          <div
            className="item-content item-texture"
          >
            <div
              className="texture-img"
              onClick={[Function]}
              style={
                Object {
                  "opacity": "1",
                }
              }
            >
              <div
                className="img-dragBg"
                onDragEnter={[Function]}
                onDragLeave={[Function]}
                onDragOver={[Function]}
                onDrop={[Function]}
              />
            </div>
            <button
              className="texture-remove"
              onClick={[Function]}
            >
              Remove
            </button>
          </div>
        </article>
        <article
          className="inspector-item wonder-float-input"
        >
          <div
            className="item-header component-label"
            onMouseDown={[Function]}
            onMouseMove={[Function]}
            onMouseUp={[Function]}
          >
            Shininess
          </div>
          <div
            className="item-content"
          >
            <input
              className="input-component float-input"
              onBlur={[Function]}
              onChange={[Function]}
              type="text"
              value="32"
            />
          </div>
        </article>
      </article>
    </article>
  </article>
</article>
`;

exports[`header import package test import assets test import material assets should add material assets to asset tree 1`] = `
<article
  className="wonder-asset-assetChildren"
>
  <article
    className="wonder-asset-fileBox "
    onClick={[Function]}
  >
    <div
      className="box-image"
    >
      <img
        onDragStart={[Function]}
        src="./public/img/mat.png"
      />
    </div>
    <div
      className="item-text "
    >
      <span>
        New Material
      </span>
    </div>
  </article>
  <article
    className="wonder-asset-fileBox "
    onClick={[Function]}
  >
    <div
      className="box-image"
    >
      <img
        onDragStart={[Function]}
        src="./public/img/mat.png"
      />
    </div>
    <div
      className="item-text "
    >
      <span>
        New Material 1
      </span>
    </div>
  </article>
</article>
`;

exports[`header import package test import assets test import texture assets should add texture assets to asset tree 1`] = `
<article
  className="wonder-asset-assetChildren"
>
  <article
    className="wonder-asset-fileBox "
    onClick={[Function]}
  >
    <div
      className="box-image"
    >
      <img
        onDragStart={[Function]}
        src="object_url1"
      />
    </div>
    <div
      className="item-text "
    >
      <span>
        loadImg
      </span>
    </div>
  </article>
</article>
`;

exports[`header import package test import scene wdb relate scene gameObjects and material assets fix bug test change default material to material asset after import 1`] = `
<article
  className="wonder-inspector-component"
>
  <article
    className="wonder-inspector-sceneTree"
  >
    <div
      className="sceneTree-name"
    >
      <article
        className="inspector-item"
      >
        <div
          className="item-header"
        >
          <span
            className="component-label"
          >
            Name
          </span>
        </div>
        <div
          className="item-content"
        >
          <input
            className="input-component float-input"
            onBlur={[Function]}
            onChange={[Function]}
            type="text"
            value="Cube"
          />
        </div>
      </article>
    </div>
    <article
      className="componentBox-component"
    >
      <div
        className="header"
      >
        <div
          className="header-triangle"
          onClick={[Function]}
        >
          <span
            className="triangle-bottom"
          />
        </div>
        <div
          className="header-title"
        >
          Transform
        </div>
      </div>
      <article
        className="wonder-inspector-transform"
      >
        <div
          className="inspector-item"
        >
          <div
            className="item-header"
          >
            Position
          </div>
          <div
            className="item-content"
          >
            <article
              className="wonder-transform-template"
            >
              <article
                className="inspector-item wonder-float-input"
              >
                <div
                  className="item-header component-label"
                  onMouseDown={[Function]}
                  onMouseMove={[Function]}
                  onMouseUp={[Function]}
                >
                  X
                </div>
                <div
                  className="item-content"
                >
                  <input
                    className="input-component float-input"
                    onBlur={[Function]}
                    onChange={[Function]}
                    type="text"
                    value="0"
                  />
                </div>
              </article>
              <article
                className="inspector-item wonder-float-input"
              >
                <div
                  className="item-header component-label"
                  onMouseDown={[Function]}
                  onMouseMove={[Function]}
                  onMouseUp={[Function]}
                >
                  Y
                </div>
                <div
                  className="item-content"
                >
                  <input
                    className="input-component float-input"
                    onBlur={[Function]}
                    onChange={[Function]}
                    type="text"
                    value="0"
                  />
                </div>
              </article>
              <article
                className="inspector-item wonder-float-input"
              >
                <div
                  className="item-header component-label"
                  onMouseDown={[Function]}
                  onMouseMove={[Function]}
                  onMouseUp={[Function]}
                >
                  Z
                </div>
                <div
                  className="item-content"
                >
                  <input
                    className="input-component float-input"
                    onBlur={[Function]}
                    onChange={[Function]}
                    type="text"
                    value="0"
                  />
                </div>
              </article>
            </article>
          </div>
        </div>
        <div
          className="inspector-item"
        >
          <div
            className="item-header"
          >
            Rotation
          </div>
          <div
            className="item-content"
          >
            <article
              className="wonder-transform-template"
            >
              <article
                className="inspector-item wonder-float-input"
              >
                <div
                  className="item-header component-label"
                  onMouseDown={[Function]}
                  onMouseMove={[Function]}
                  onMouseUp={[Function]}
                >
                  X
                </div>
                <div
                  className="item-content"
                >
                  <input
                    className="input-component float-input"
                    onBlur={[Function]}
                    onChange={[Function]}
                    type="text"
                    value="0"
                  />
                </div>
              </article>
              <article
                className="inspector-item wonder-float-input"
              >
                <div
                  className="item-header component-label"
                  onMouseDown={[Function]}
                  onMouseMove={[Function]}
                  onMouseUp={[Function]}
                >
                  Y
                </div>
                <div
                  className="item-content"
                >
                  <input
                    className="input-component float-input"
                    onBlur={[Function]}
                    onChange={[Function]}
                    type="text"
                    value="0"
                  />
                </div>
              </article>
              <article
                className="inspector-item wonder-float-input"
              >
                <div
                  className="item-header component-label"
                  onMouseDown={[Function]}
                  onMouseMove={[Function]}
                  onMouseUp={[Function]}
                >
                  Z
                </div>
                <div
                  className="item-content"
                >
                  <input
                    className="input-component float-input"
                    onBlur={[Function]}
                    onChange={[Function]}
                    type="text"
                    value="0"
                  />
                </div>
              </article>
            </article>
          </div>
        </div>
        <div
          className="inspector-item"
        >
          <div
            className="item-header"
          >
            Scale
          </div>
          <div
            className="item-content"
          >
            <article
              className="wonder-transform-template"
            >
              <article
                className="inspector-item wonder-float-input"
              >
                <div
                  className="item-header component-label"
                  onMouseDown={[Function]}
                  onMouseMove={[Function]}
                  onMouseUp={[Function]}
                >
                  X
                </div>
                <div
                  className="item-content"
                >
                  <input
                    className="input-component float-input"
                    onBlur={[Function]}
                    onChange={[Function]}
                    type="text"
                    value="1"
                  />
                </div>
              </article>
              <article
                className="inspector-item wonder-float-input"
              >
                <div
                  className="item-header component-label"
                  onMouseDown={[Function]}
                  onMouseMove={[Function]}
                  onMouseUp={[Function]}
                >
                  Y
                </div>
                <div
                  className="item-content"
                >
                  <input
                    className="input-component float-input"
                    onBlur={[Function]}
                    onChange={[Function]}
                    type="text"
                    value="1"
                  />
                </div>
              </article>
              <article
                className="inspector-item wonder-float-input"
              >
                <div
                  className="item-header component-label"
                  onMouseDown={[Function]}
                  onMouseMove={[Function]}
                  onMouseUp={[Function]}
                >
                  Z
                </div>
                <div
                  className="item-content"
                >
                  <input
                    className="input-component float-input"
                    onBlur={[Function]}
                    onChange={[Function]}
                    type="text"
                    value="1"
                  />
                </div>
              </article>
            </article>
          </div>
        </div>
      </article>
    </article>
    <article
      className="componentBox-component"
    >
      <div
        className="header"
      >
        <div
          className="header-triangle"
          onClick={[Function]}
        >
          <span
            className="triangle-bottom"
          />
        </div>
        <div
          className="header-title"
        >
          RenderGroup
        </div>
        <div
          className="header-close"
        >
          <img
            onClick={[Function]}
            src="./public/img/close.png"
          />
        </div>
      </div>
      <article
        className="wonder-render-group"
      >
        <div
          className="inspector-component"
        >
          <div
            className="component-title"
          >
            MeshRender
          </div>
          <hr />
          <div
            className="component-content"
          >
            <article
              className="wonder-mesh-renderer"
            >
              <article
                className="inspector-item"
              >
                <div
                  className="item-header"
                >
                  <span
                    className=""
                  >
                    Draw mode
                  </span>
                </div>
                <div
                  className="item-content"
                >
                  <select
                    onChange={[Function]}
                    value="4"
                  >
                    <option
                      value="0"
                    >
                      points
                    </option>
                    <option
                      value="1"
                    >
                      lines
                    </option>
                    <option
                      value="2"
                    >
                      line_loop
                    </option>
                    <option
                      value="3"
                    >
                      Line_strip
                    </option>
                    <option
                      value="4"
                    >
                      Triangles
                    </option>
                    <option
                      value="5"
                    >
                      triangle_strip
                    </option>
                    <option
                      value="6"
                    >
                      Triangle_fan
                    </option>
                  </select>
                </div>
              </article>
            </article>
          </div>
        </div>
        <div
          className="inspector-component"
        >
          <div
            className="component-title"
          >
            Material
          </div>
          <hr />
          <div
            className="component-content"
          >
            <article
              className="wonder-inspector-material"
            >
              <div
                className="inspector-item"
              >
                <div
                  className="item-header"
                >
                  Material
                </div>
                <div
                  className="item-content"
                >
                  <div
                    className="inspector-select"
                  >
                    <div
                      className="select-name"
                    >
                      New Material
                    </div>
                    <div
                      className="select-img"
                      onClick={[Function]}
                    >
                      <img
                        src="./public/img/select.png"
                      />
                    </div>
                  </div>
                </div>
              </div>
              <div
                className="material-value"
              >
                <article
                  className="inspector-item"
                >
                  <div
                    className="item-header"
                  >
                    <span
                      className=""
                    >
                      Type
                    </span>
                  </div>
                  <div
                    className="item-content"
                  >
                    <select
                      onChange={[Function]}
                      value="1"
                    >
                      <option
                        value="0"
                      >
                        basic_material
                      </option>
                      <option
                        value="1"
                      >
                        light_material
                      </option>
                    </select>
                  </div>
                </article>
                <div
                  className=""
                >
                  <article
                    className="wonder-light-material"
                  >
                    <article
                      className="inspector-item"
                    >
                      <div
                        className="item-header"
                      >
                        Diffcuse color
                      </div>
                      <div
                        className="item-content item-color"
                      >
                        <div
                          className="color-hex"
                          onClick={[Function]}
                          style={
                            Object {
                              "background": "#ffffff",
                            }
                          }
                        />
                        <div
                          className="color-select"
                          onClick={[Function]}
                        >
                          <img
                            src="./public/img/color.png"
                          />
                        </div>
                      </div>
                    </article>
                    <article
                      className="inspector-item"
                    >
                      <div
                        className="item-header"
                      >
                        Diffuse map
                      </div>
                      <div
                        className="item-content item-texture"
                      >
                        <div
                          className="texture-img"
                          onClick={[Function]}
                          style={
                            Object {
                              "opacity": "1",
                            }
                          }
                        >
                          <div
                            className="img-dragBg"
                            onDragEnter={[Function]}
                            onDragLeave={[Function]}
                            onDragOver={[Function]}
                            onDrop={[Function]}
                          />
                        </div>
                        <button
                          className="texture-remove"
                          onClick={[Function]}
                        >
                          Remove
                        </button>
                      </div>
                    </article>
                    <article
                      className="inspector-item wonder-float-input"
                    >
                      <div
                        className="item-header component-label"
                        onMouseDown={[Function]}
                        onMouseMove={[Function]}
                        onMouseUp={[Function]}
                      >
                        Shininess
                      </div>
                      <div
                        className="item-content"
                      >
                        <input
                          className="input-component float-input"
                          onBlur={[Function]}
                          onChange={[Function]}
                          type="text"
                          value="32"
                        />
                      </div>
                    </article>
                  </article>
                </div>
              </div>
            </article>
          </div>
        </div>
      </article>
    </article>
    <article
      className="componentBox-component"
    >
      <div
        className="header"
      >
        <div
          className="header-triangle"
          onClick={[Function]}
        >
          <span
            className="triangle-bottom"
          />
        </div>
        <div
          className="header-title"
        >
          Geometry
        </div>
        <div
          className="header-close"
        >
          <img
            onClick={[Function]}
            src="./public/img/close.png"
          />
        </div>
      </div>
      <article
        className="wonder-inspector-geometry"
      >
        <div
          className="inspector-item"
        >
          <div
            className="item-header"
          >
            Geometry
          </div>
          <div
            className="item-content"
          >
            <div
              className="inspector-select"
            >
              <div
                className="select-name"
              >
                Wonder-Default-Cube
              </div>
              <div
                className="select-img"
                onClick={[Function]}
              >
                <img
                  src="./public/img/select.png"
                />
              </div>
            </div>
          </div>
        </div>
      </article>
    </article>
    <article
      className="wonder-addable-component"
    >
      <div
        className="addable-component-content"
      >
        <div
          className="content-btn"
        >
          <button
            className="addable-btn"
            onClick={[Function]}
          >
            Add Component
          </button>
        </div>
      </div>
    </article>
  </article>
</article>
`;

exports[`header import package test import scene wdb relate scene gameObjects and material assets if scene gameObject use default material, should still use it after import 1`] = `
<article
  className="wonder-inspector-component"
>
  <article
    className="wonder-inspector-sceneTree"
  >
    <div
      className="sceneTree-name"
    >
      <article
        className="inspector-item"
      >
        <div
          className="item-header"
        >
          <span
            className="component-label"
          >
            Name
          </span>
        </div>
        <div
          className="item-content"
        >
          <input
            className="input-component float-input"
            onBlur={[Function]}
            onChange={[Function]}
            type="text"
            value="Cube"
          />
        </div>
      </article>
    </div>
    <article
      className="componentBox-component"
    >
      <div
        className="header"
      >
        <div
          className="header-triangle"
          onClick={[Function]}
        >
          <span
            className="triangle-bottom"
          />
        </div>
        <div
          className="header-title"
        >
          Transform
        </div>
      </div>
      <article
        className="wonder-inspector-transform"
      >
        <div
          className="inspector-item"
        >
          <div
            className="item-header"
          >
            Position
          </div>
          <div
            className="item-content"
          >
            <article
              className="wonder-transform-template"
            >
              <article
                className="inspector-item wonder-float-input"
              >
                <div
                  className="item-header component-label"
                  onMouseDown={[Function]}
                  onMouseMove={[Function]}
                  onMouseUp={[Function]}
                >
                  X
                </div>
                <div
                  className="item-content"
                >
                  <input
                    className="input-component float-input"
                    onBlur={[Function]}
                    onChange={[Function]}
                    type="text"
                    value="0"
                  />
                </div>
              </article>
              <article
                className="inspector-item wonder-float-input"
              >
                <div
                  className="item-header component-label"
                  onMouseDown={[Function]}
                  onMouseMove={[Function]}
                  onMouseUp={[Function]}
                >
                  Y
                </div>
                <div
                  className="item-content"
                >
                  <input
                    className="input-component float-input"
                    onBlur={[Function]}
                    onChange={[Function]}
                    type="text"
                    value="0"
                  />
                </div>
              </article>
              <article
                className="inspector-item wonder-float-input"
              >
                <div
                  className="item-header component-label"
                  onMouseDown={[Function]}
                  onMouseMove={[Function]}
                  onMouseUp={[Function]}
                >
                  Z
                </div>
                <div
                  className="item-content"
                >
                  <input
                    className="input-component float-input"
                    onBlur={[Function]}
                    onChange={[Function]}
                    type="text"
                    value="0"
                  />
                </div>
              </article>
            </article>
          </div>
        </div>
        <div
          className="inspector-item"
        >
          <div
            className="item-header"
          >
            Rotation
          </div>
          <div
            className="item-content"
          >
            <article
              className="wonder-transform-template"
            >
              <article
                className="inspector-item wonder-float-input"
              >
                <div
                  className="item-header component-label"
                  onMouseDown={[Function]}
                  onMouseMove={[Function]}
                  onMouseUp={[Function]}
                >
                  X
                </div>
                <div
                  className="item-content"
                >
                  <input
                    className="input-component float-input"
                    onBlur={[Function]}
                    onChange={[Function]}
                    type="text"
                    value="0"
                  />
                </div>
              </article>
              <article
                className="inspector-item wonder-float-input"
              >
                <div
                  className="item-header component-label"
                  onMouseDown={[Function]}
                  onMouseMove={[Function]}
                  onMouseUp={[Function]}
                >
                  Y
                </div>
                <div
                  className="item-content"
                >
                  <input
                    className="input-component float-input"
                    onBlur={[Function]}
                    onChange={[Function]}
                    type="text"
                    value="0"
                  />
                </div>
              </article>
              <article
                className="inspector-item wonder-float-input"
              >
                <div
                  className="item-header component-label"
                  onMouseDown={[Function]}
                  onMouseMove={[Function]}
                  onMouseUp={[Function]}
                >
                  Z
                </div>
                <div
                  className="item-content"
                >
                  <input
                    className="input-component float-input"
                    onBlur={[Function]}
                    onChange={[Function]}
                    type="text"
                    value="0"
                  />
                </div>
              </article>
            </article>
          </div>
        </div>
        <div
          className="inspector-item"
        >
          <div
            className="item-header"
          >
            Scale
          </div>
          <div
            className="item-content"
          >
            <article
              className="wonder-transform-template"
            >
              <article
                className="inspector-item wonder-float-input"
              >
                <div
                  className="item-header component-label"
                  onMouseDown={[Function]}
                  onMouseMove={[Function]}
                  onMouseUp={[Function]}
                >
                  X
                </div>
                <div
                  className="item-content"
                >
                  <input
                    className="input-component float-input"
                    onBlur={[Function]}
                    onChange={[Function]}
                    type="text"
                    value="1"
                  />
                </div>
              </article>
              <article
                className="inspector-item wonder-float-input"
              >
                <div
                  className="item-header component-label"
                  onMouseDown={[Function]}
                  onMouseMove={[Function]}
                  onMouseUp={[Function]}
                >
                  Y
                </div>
                <div
                  className="item-content"
                >
                  <input
                    className="input-component float-input"
                    onBlur={[Function]}
                    onChange={[Function]}
                    type="text"
                    value="1"
                  />
                </div>
              </article>
              <article
                className="inspector-item wonder-float-input"
              >
                <div
                  className="item-header component-label"
                  onMouseDown={[Function]}
                  onMouseMove={[Function]}
                  onMouseUp={[Function]}
                >
                  Z
                </div>
                <div
                  className="item-content"
                >
                  <input
                    className="input-component float-input"
                    onBlur={[Function]}
                    onChange={[Function]}
                    type="text"
                    value="1"
                  />
                </div>
              </article>
            </article>
          </div>
        </div>
      </article>
    </article>
    <article
      className="componentBox-component"
    >
      <div
        className="header"
      >
        <div
          className="header-triangle"
          onClick={[Function]}
        >
          <span
            className="triangle-bottom"
          />
        </div>
        <div
          className="header-title"
        >
          RenderGroup
        </div>
        <div
          className="header-close"
        >
          <img
            onClick={[Function]}
            src="./public/img/close.png"
          />
        </div>
      </div>
      <article
        className="wonder-render-group"
      >
        <div
          className="inspector-component"
        >
          <div
            className="component-title"
          >
            MeshRender
          </div>
          <hr />
          <div
            className="component-content"
          >
            <article
              className="wonder-mesh-renderer"
            >
              <article
                className="inspector-item"
              >
                <div
                  className="item-header"
                >
                  <span
                    className=""
                  >
                    Draw mode
                  </span>
                </div>
                <div
                  className="item-content"
                >
                  <select
                    onChange={[Function]}
                    value="4"
                  >
                    <option
                      value="0"
                    >
                      points
                    </option>
                    <option
                      value="1"
                    >
                      lines
                    </option>
                    <option
                      value="2"
                    >
                      line_loop
                    </option>
                    <option
                      value="3"
                    >
                      Line_strip
                    </option>
                    <option
                      value="4"
                    >
                      Triangles
                    </option>
                    <option
                      value="5"
                    >
                      triangle_strip
                    </option>
                    <option
                      value="6"
                    >
                      Triangle_fan
                    </option>
                  </select>
                </div>
              </article>
            </article>
          </div>
        </div>
        <div
          className="inspector-component"
        >
          <div
            className="component-title"
          >
            Material
          </div>
          <hr />
          <div
            className="component-content"
          >
            <article
              className="wonder-inspector-material"
            >
              <div
                className="inspector-item"
              >
                <div
                  className="item-header"
                >
                  Material
                </div>
                <div
                  className="item-content"
                >
                  <div
                    className="inspector-select"
                  >
                    <div
                      className="select-name"
                    >
                      Wonder-Default-Light-Material
                    </div>
                    <div
                      className="select-img"
                      onClick={[Function]}
                    >
                      <img
                        src="./public/img/select.png"
                      />
                    </div>
                  </div>
                </div>
              </div>
              <div
                className="material-value"
              >
                <article
                  className="inspector-item"
                >
                  <div
                    className="item-header"
                  >
                    <span
                      className=""
                    >
                      Type
                    </span>
                  </div>
                  <div
                    className="item-content"
                  >
                    <select
                      onChange={[Function]}
                      value="1"
                    >
                      <option
                        value="0"
                      >
                        basic_material
                      </option>
                      <option
                        value="1"
                      >
                        light_material
                      </option>
                    </select>
                  </div>
                </article>
                <div
                  className=""
                >
                  <article
                    className="wonder-light-material"
                  >
                    <article
                      className="inspector-item"
                    >
                      <div
                        className="item-header"
                      >
                        Diffcuse color
                      </div>
                      <div
                        className="item-content item-color"
                      >
                        <div
                          className="color-hex"
                          onClick={[Function]}
                          style={
                            Object {
                              "background": "#ffffff",
                            }
                          }
                        />
                        <div
                          className="color-select"
                          onClick={[Function]}
                        >
                          <img
                            src="./public/img/color.png"
                          />
                        </div>
                      </div>
                    </article>
                    <article
                      className="inspector-item"
                    >
                      <div
                        className="item-header"
                      >
                        Diffuse map
                      </div>
                      <div
                        className="item-content item-texture"
                      >
                        <div
                          className="texture-img"
                          onClick={[Function]}
                          style={
                            Object {
                              "opacity": "1",
                            }
                          }
                        >
                          <div
                            className="img-dragBg"
                            onDragEnter={[Function]}
                            onDragLeave={[Function]}
                            onDragOver={[Function]}
                            onDrop={[Function]}
                          />
                        </div>
                        <button
                          className="texture-remove"
                          onClick={[Function]}
                        >
                          Remove
                        </button>
                      </div>
                    </article>
                    <article
                      className="inspector-item wonder-float-input"
                    >
                      <div
                        className="item-header component-label"
                        onMouseDown={[Function]}
                        onMouseMove={[Function]}
                        onMouseUp={[Function]}
                      >
                        Shininess
                      </div>
                      <div
                        className="item-content"
                      >
                        <input
                          className="input-component float-input"
                          onBlur={[Function]}
                          onChange={[Function]}
                          type="text"
                          value="32"
                        />
                      </div>
                    </article>
                  </article>
                </div>
                <div
                  className="material-shade"
                />
              </div>
            </article>
          </div>
        </div>
      </article>
    </article>
    <article
      className="componentBox-component"
    >
      <div
        className="header"
      >
        <div
          className="header-triangle"
          onClick={[Function]}
        >
          <span
            className="triangle-bottom"
          />
        </div>
        <div
          className="header-title"
        >
          Geometry
        </div>
        <div
          className="header-close"
        >
          <img
            onClick={[Function]}
            src="./public/img/close.png"
          />
        </div>
      </div>
      <article
        className="wonder-inspector-geometry"
      >
        <div
          className="inspector-item"
        >
          <div
            className="item-header"
          >
            Geometry
          </div>
          <div
            className="item-content"
          >
            <div
              className="inspector-select"
            >
              <div
                className="select-name"
              >
                Wonder-Default-Cube
              </div>
              <div
                className="select-img"
                onClick={[Function]}
              >
                <img
                  src="./public/img/select.png"
                />
              </div>
            </div>
          </div>
        </div>
      </article>
    </article>
    <article
      className="wonder-addable-component"
    >
      <div
        className="addable-component-content"
      >
        <div
          className="content-btn"
        >
          <button
            className="addable-btn"
            onClick={[Function]}
          >
            Add Component
          </button>
        </div>
      </div>
    </article>
  </article>
</article>
`;

exports[`header import package test import scene wdb relate scene gameObjects and material assets if scene gameObject use material asset, should still use it after import 1`] = `
<article
  className="wonder-inspector-component"
>
  <article
    className="wonder-inspector-sceneTree"
  >
    <div
      className="sceneTree-name"
    >
      <article
        className="inspector-item"
      >
        <div
          className="item-header"
        >
          <span
            className="component-label"
          >
            Name
          </span>
        </div>
        <div
          className="item-content"
        >
          <input
            className="input-component float-input"
            onBlur={[Function]}
            onChange={[Function]}
            type="text"
            value="Cube"
          />
        </div>
      </article>
    </div>
    <article
      className="componentBox-component"
    >
      <div
        className="header"
      >
        <div
          className="header-triangle"
          onClick={[Function]}
        >
          <span
            className="triangle-bottom"
          />
        </div>
        <div
          className="header-title"
        >
          Transform
        </div>
      </div>
      <article
        className="wonder-inspector-transform"
      >
        <div
          className="inspector-item"
        >
          <div
            className="item-header"
          >
            Position
          </div>
          <div
            className="item-content"
          >
            <article
              className="wonder-transform-template"
            >
              <article
                className="inspector-item wonder-float-input"
              >
                <div
                  className="item-header component-label"
                  onMouseDown={[Function]}
                  onMouseMove={[Function]}
                  onMouseUp={[Function]}
                >
                  X
                </div>
                <div
                  className="item-content"
                >
                  <input
                    className="input-component float-input"
                    onBlur={[Function]}
                    onChange={[Function]}
                    type="text"
                    value="0"
                  />
                </div>
              </article>
              <article
                className="inspector-item wonder-float-input"
              >
                <div
                  className="item-header component-label"
                  onMouseDown={[Function]}
                  onMouseMove={[Function]}
                  onMouseUp={[Function]}
                >
                  Y
                </div>
                <div
                  className="item-content"
                >
                  <input
                    className="input-component float-input"
                    onBlur={[Function]}
                    onChange={[Function]}
                    type="text"
                    value="0"
                  />
                </div>
              </article>
              <article
                className="inspector-item wonder-float-input"
              >
                <div
                  className="item-header component-label"
                  onMouseDown={[Function]}
                  onMouseMove={[Function]}
                  onMouseUp={[Function]}
                >
                  Z
                </div>
                <div
                  className="item-content"
                >
                  <input
                    className="input-component float-input"
                    onBlur={[Function]}
                    onChange={[Function]}
                    type="text"
                    value="0"
                  />
                </div>
              </article>
            </article>
          </div>
        </div>
        <div
          className="inspector-item"
        >
          <div
            className="item-header"
          >
            Rotation
          </div>
          <div
            className="item-content"
          >
            <article
              className="wonder-transform-template"
            >
              <article
                className="inspector-item wonder-float-input"
              >
                <div
                  className="item-header component-label"
                  onMouseDown={[Function]}
                  onMouseMove={[Function]}
                  onMouseUp={[Function]}
                >
                  X
                </div>
                <div
                  className="item-content"
                >
                  <input
                    className="input-component float-input"
                    onBlur={[Function]}
                    onChange={[Function]}
                    type="text"
                    value="0"
                  />
                </div>
              </article>
              <article
                className="inspector-item wonder-float-input"
              >
                <div
                  className="item-header component-label"
                  onMouseDown={[Function]}
                  onMouseMove={[Function]}
                  onMouseUp={[Function]}
                >
                  Y
                </div>
                <div
                  className="item-content"
                >
                  <input
                    className="input-component float-input"
                    onBlur={[Function]}
                    onChange={[Function]}
                    type="text"
                    value="0"
                  />
                </div>
              </article>
              <article
                className="inspector-item wonder-float-input"
              >
                <div
                  className="item-header component-label"
                  onMouseDown={[Function]}
                  onMouseMove={[Function]}
                  onMouseUp={[Function]}
                >
                  Z
                </div>
                <div
                  className="item-content"
                >
                  <input
                    className="input-component float-input"
                    onBlur={[Function]}
                    onChange={[Function]}
                    type="text"
                    value="0"
                  />
                </div>
              </article>
            </article>
          </div>
        </div>
        <div
          className="inspector-item"
        >
          <div
            className="item-header"
          >
            Scale
          </div>
          <div
            className="item-content"
          >
            <article
              className="wonder-transform-template"
            >
              <article
                className="inspector-item wonder-float-input"
              >
                <div
                  className="item-header component-label"
                  onMouseDown={[Function]}
                  onMouseMove={[Function]}
                  onMouseUp={[Function]}
                >
                  X
                </div>
                <div
                  className="item-content"
                >
                  <input
                    className="input-component float-input"
                    onBlur={[Function]}
                    onChange={[Function]}
                    type="text"
                    value="1"
                  />
                </div>
              </article>
              <article
                className="inspector-item wonder-float-input"
              >
                <div
                  className="item-header component-label"
                  onMouseDown={[Function]}
                  onMouseMove={[Function]}
                  onMouseUp={[Function]}
                >
                  Y
                </div>
                <div
                  className="item-content"
                >
                  <input
                    className="input-component float-input"
                    onBlur={[Function]}
                    onChange={[Function]}
                    type="text"
                    value="1"
                  />
                </div>
              </article>
              <article
                className="inspector-item wonder-float-input"
              >
                <div
                  className="item-header component-label"
                  onMouseDown={[Function]}
                  onMouseMove={[Function]}
                  onMouseUp={[Function]}
                >
                  Z
                </div>
                <div
                  className="item-content"
                >
                  <input
                    className="input-component float-input"
                    onBlur={[Function]}
                    onChange={[Function]}
                    type="text"
                    value="1"
                  />
                </div>
              </article>
            </article>
          </div>
        </div>
      </article>
    </article>
    <article
      className="componentBox-component"
    >
      <div
        className="header"
      >
        <div
          className="header-triangle"
          onClick={[Function]}
        >
          <span
            className="triangle-bottom"
          />
        </div>
        <div
          className="header-title"
        >
          RenderGroup
        </div>
        <div
          className="header-close"
        >
          <img
            onClick={[Function]}
            src="./public/img/close.png"
          />
        </div>
      </div>
      <article
        className="wonder-render-group"
      >
        <div
          className="inspector-component"
        >
          <div
            className="component-title"
          >
            MeshRender
          </div>
          <hr />
          <div
            className="component-content"
          >
            <article
              className="wonder-mesh-renderer"
            >
              <article
                className="inspector-item"
              >
                <div
                  className="item-header"
                >
                  <span
                    className=""
                  >
                    Draw mode
                  </span>
                </div>
                <div
                  className="item-content"
                >
                  <select
                    onChange={[Function]}
                    value="4"
                  >
                    <option
                      value="0"
                    >
                      points
                    </option>
                    <option
                      value="1"
                    >
                      lines
                    </option>
                    <option
                      value="2"
                    >
                      line_loop
                    </option>
                    <option
                      value="3"
                    >
                      Line_strip
                    </option>
                    <option
                      value="4"
                    >
                      Triangles
                    </option>
                    <option
                      value="5"
                    >
                      triangle_strip
                    </option>
                    <option
                      value="6"
                    >
                      Triangle_fan
                    </option>
                  </select>
                </div>
              </article>
            </article>
          </div>
        </div>
        <div
          className="inspector-component"
        >
          <div
            className="component-title"
          >
            Material
          </div>
          <hr />
          <div
            className="component-content"
          >
            <article
              className="wonder-inspector-material"
            >
              <div
                className="inspector-item"
              >
                <div
                  className="item-header"
                >
                  Material
                </div>
                <div
                  className="item-content"
                >
                  <div
                    className="inspector-select"
                  >
                    <div
                      className="select-name"
                    >
                      New Material
                    </div>
                    <div
                      className="select-img"
                      onClick={[Function]}
                    >
                      <img
                        src="./public/img/select.png"
                      />
                    </div>
                  </div>
                </div>
              </div>
              <div
                className="material-value"
              >
                <article
                  className="inspector-item"
                >
                  <div
                    className="item-header"
                  >
                    <span
                      className=""
                    >
                      Type
                    </span>
                  </div>
                  <div
                    className="item-content"
                  >
                    <select
                      onChange={[Function]}
                      value="1"
                    >
                      <option
                        value="0"
                      >
                        basic_material
                      </option>
                      <option
                        value="1"
                      >
                        light_material
                      </option>
                    </select>
                  </div>
                </article>
                <div
                  className=""
                >
                  <article
                    className="wonder-light-material"
                  >
                    <article
                      className="inspector-item"
                    >
                      <div
                        className="item-header"
                      >
                        Diffcuse color
                      </div>
                      <div
                        className="item-content item-color"
                      >
                        <div
                          className="color-hex"
                          onClick={[Function]}
                          style={
                            Object {
                              "background": "#ffffff",
                            }
                          }
                        />
                        <div
                          className="color-select"
                          onClick={[Function]}
                        >
                          <img
                            src="./public/img/color.png"
                          />
                        </div>
                      </div>
                    </article>
                    <article
                      className="inspector-item"
                    >
                      <div
                        className="item-header"
                      >
                        Diffuse map
                      </div>
                      <div
                        className="item-content item-texture"
                      >
                        <div
                          className="texture-img"
                          onClick={[Function]}
                          style={
                            Object {
                              "opacity": "1",
                            }
                          }
                        >
                          <div
                            className="img-dragBg"
                            onDragEnter={[Function]}
                            onDragLeave={[Function]}
                            onDragOver={[Function]}
                            onDrop={[Function]}
                          />
                        </div>
                        <button
                          className="texture-remove"
                          onClick={[Function]}
                        >
                          Remove
                        </button>
                      </div>
                    </article>
                    <article
                      className="inspector-item wonder-float-input"
                    >
                      <div
                        className="item-header component-label"
                        onMouseDown={[Function]}
                        onMouseMove={[Function]}
                        onMouseUp={[Function]}
                      >
                        Shininess
                      </div>
                      <div
                        className="item-content"
                      >
                        <input
                          className="input-component float-input"
                          onBlur={[Function]}
                          onChange={[Function]}
                          type="text"
                          value="32"
                        />
                      </div>
                    </article>
                  </article>
                </div>
              </div>
            </article>
          </div>
        </div>
      </article>
    </article>
    <article
      className="componentBox-component"
    >
      <div
        className="header"
      >
        <div
          className="header-triangle"
          onClick={[Function]}
        >
          <span
            className="triangle-bottom"
          />
        </div>
        <div
          className="header-title"
        >
          Geometry
        </div>
        <div
          className="header-close"
        >
          <img
            onClick={[Function]}
            src="./public/img/close.png"
          />
        </div>
      </div>
      <article
        className="wonder-inspector-geometry"
      >
        <div
          className="inspector-item"
        >
          <div
            className="item-header"
          >
            Geometry
          </div>
          <div
            className="item-content"
          >
            <div
              className="inspector-select"
            >
              <div
                className="select-name"
              >
                Wonder-Default-Cube
              </div>
              <div
                className="select-img"
                onClick={[Function]}
              >
                <img
                  src="./public/img/select.png"
                />
              </div>
            </div>
          </div>
        </div>
      </article>
    </article>
    <article
      className="wonder-addable-component"
    >
      <div
        className="addable-component-content"
      >
        <div
          className="content-btn"
        >
          <button
            className="addable-btn"
            onClick={[Function]}
          >
            Add Component
          </button>
        </div>
      </div>
    </article>
  </article>
</article>
`;

exports[`header import package test import scene wdb should reset scene gameObject 1`] = `
<article
  className="wonder-sceneTree-component"
>
  <article
    className="wonder-tree"
  >
    <ul
      className="wonder-tree-node"
    >
      <li>
        <div
          className="item-triangle"
          onMouseDown={[Function]}
        >
          <img
            src="./public/img/down.png"
          />
        </div>
        <div
          className="draggable-container  no-drag"
          draggable={false}
          onDragEnd={[Function]}
          onDragLeave={[Function]}
          onDragOver={[Function]}
          onDragStart={[Function]}
          onDrop={[Function]}
          onMouseDown={[Function]}
          style={Object {}}
        >
          Scene
        </div>
      </li>
      <ul
        className="wonder-tree-node"
      >
        <li>
          <div
            className="item-triangle"
          />
          <div
            className="draggable-container  no-drag"
            draggable={true}
            onDragEnd={[Function]}
            onDragLeave={[Function]}
            onDragOver={[Function]}
            onDragStart={[Function]}
            onDrop={[Function]}
            onMouseDown={[Function]}
            style={Object {}}
          >
            Camera
          </div>
        </li>
      </ul>
      <ul
        className="wonder-tree-node"
      >
        <li>
          <div
            className="item-triangle"
          />
          <div
            className="draggable-container  no-drag"
            draggable={true}
            onDragEnd={[Function]}
            onDragLeave={[Function]}
            onDragOver={[Function]}
            onDragStart={[Function]}
            onDrop={[Function]}
            onMouseDown={[Function]}
            style={Object {}}
          >
            Cube
          </div>
        </li>
      </ul>
      <ul
        className="wonder-tree-node"
      >
        <li>
          <div
            className="item-triangle"
          />
          <div
            className="draggable-container  no-drag"
            draggable={true}
            onDragEnd={[Function]}
            onDragLeave={[Function]}
            onDragOver={[Function]}
            onDragStart={[Function]}
            onDrop={[Function]}
            onMouseDown={[Function]}
            style={Object {}}
          >
            Cube
          </div>
        </li>
      </ul>
      <ul
        className="wonder-tree-node"
      >
        <li>
          <div
            className="item-triangle"
          />
          <div
            className="draggable-container  no-drag"
            draggable={true}
            onDragEnd={[Function]}
            onDragLeave={[Function]}
            onDragOver={[Function]}
            onDragStart={[Function]}
            onDrop={[Function]}
            onMouseDown={[Function]}
            style={Object {}}
          >
            Direction Light
          </div>
        </li>
      </ul>
      <ul
        className="wonder-tree-node"
      >
        <li>
          <div
            className="item-triangle"
          />
          <div
            className="draggable-container  no-drag"
            draggable={true}
            onDragEnd={[Function]}
            onDragLeave={[Function]}
            onDragOver={[Function]}
            onDragStart={[Function]}
            onDrop={[Function]}
            onMouseDown={[Function]}
            style={Object {}}
          >
            Cube
          </div>
        </li>
      </ul>
    </ul>
  </article>
</article>
`;

exports[`header import package test import scene wdb test show Scene inspector should show component ui 1`] = `
<article
  className="wonder-inspector-component"
>
  <article
    className="wonder-inspector-sceneTree"
  >
    <div
      className="sceneTree-name"
    >
      <article
        className="inspector-item"
      >
        <div
          className="item-header"
        >
          <span
            className="component-label"
          >
            Name
          </span>
        </div>
        <div
          className="item-content"
        >
          <input
            className="input-component float-input"
            onBlur={[Function]}
            onChange={[Function]}
            type="text"
            value="Scene"
          />
        </div>
      </article>
    </div>
    <article
      className="componentBox-component"
    >
      <div
        className="header"
      >
        <div
          className="header-triangle"
          onClick={[Function]}
        >
          <span
            className="triangle-bottom"
          />
        </div>
        <div
          className="header-title"
        >
          Transform
        </div>
      </div>
      <article
        className="wonder-inspector-transform"
      >
        <div
          className="inspector-item"
        >
          <div
            className="item-header"
          >
            Position
          </div>
          <div
            className="item-content"
          >
            <article
              className="wonder-transform-template"
            >
              <article
                className="inspector-item wonder-float-input"
              >
                <div
                  className="item-header component-label"
                  onMouseDown={[Function]}
                  onMouseMove={[Function]}
                  onMouseUp={[Function]}
                >
                  X
                </div>
                <div
                  className="item-content"
                >
                  <input
                    className="input-component float-input"
                    onBlur={[Function]}
                    onChange={[Function]}
                    type="text"
                    value="0"
                  />
                </div>
              </article>
              <article
                className="inspector-item wonder-float-input"
              >
                <div
                  className="item-header component-label"
                  onMouseDown={[Function]}
                  onMouseMove={[Function]}
                  onMouseUp={[Function]}
                >
                  Y
                </div>
                <div
                  className="item-content"
                >
                  <input
                    className="input-component float-input"
                    onBlur={[Function]}
                    onChange={[Function]}
                    type="text"
                    value="0"
                  />
                </div>
              </article>
              <article
                className="inspector-item wonder-float-input"
              >
                <div
                  className="item-header component-label"
                  onMouseDown={[Function]}
                  onMouseMove={[Function]}
                  onMouseUp={[Function]}
                >
                  Z
                </div>
                <div
                  className="item-content"
                >
                  <input
                    className="input-component float-input"
                    onBlur={[Function]}
                    onChange={[Function]}
                    type="text"
                    value="0"
                  />
                </div>
              </article>
            </article>
          </div>
        </div>
        <div
          className="inspector-item"
        >
          <div
            className="item-header"
          >
            Rotation
          </div>
          <div
            className="item-content"
          >
            <article
              className="wonder-transform-template"
            >
              <article
                className="inspector-item wonder-float-input"
              >
                <div
                  className="item-header component-label"
                  onMouseDown={[Function]}
                  onMouseMove={[Function]}
                  onMouseUp={[Function]}
                >
                  X
                </div>
                <div
                  className="item-content"
                >
                  <input
                    className="input-component float-input"
                    onBlur={[Function]}
                    onChange={[Function]}
                    type="text"
                    value="0"
                  />
                </div>
              </article>
              <article
                className="inspector-item wonder-float-input"
              >
                <div
                  className="item-header component-label"
                  onMouseDown={[Function]}
                  onMouseMove={[Function]}
                  onMouseUp={[Function]}
                >
                  Y
                </div>
                <div
                  className="item-content"
                >
                  <input
                    className="input-component float-input"
                    onBlur={[Function]}
                    onChange={[Function]}
                    type="text"
                    value="0"
                  />
                </div>
              </article>
              <article
                className="inspector-item wonder-float-input"
              >
                <div
                  className="item-header component-label"
                  onMouseDown={[Function]}
                  onMouseMove={[Function]}
                  onMouseUp={[Function]}
                >
                  Z
                </div>
                <div
                  className="item-content"
                >
                  <input
                    className="input-component float-input"
                    onBlur={[Function]}
                    onChange={[Function]}
                    type="text"
                    value="0"
                  />
                </div>
              </article>
            </article>
          </div>
        </div>
        <div
          className="inspector-item"
        >
          <div
            className="item-header"
          >
            Scale
          </div>
          <div
            className="item-content"
          >
            <article
              className="wonder-transform-template"
            >
              <article
                className="inspector-item wonder-float-input"
              >
                <div
                  className="item-header component-label"
                  onMouseDown={[Function]}
                  onMouseMove={[Function]}
                  onMouseUp={[Function]}
                >
                  X
                </div>
                <div
                  className="item-content"
                >
                  <input
                    className="input-component float-input"
                    onBlur={[Function]}
                    onChange={[Function]}
                    type="text"
                    value="1"
                  />
                </div>
              </article>
              <article
                className="inspector-item wonder-float-input"
              >
                <div
                  className="item-header component-label"
                  onMouseDown={[Function]}
                  onMouseMove={[Function]}
                  onMouseUp={[Function]}
                >
                  Y
                </div>
                <div
                  className="item-content"
                >
                  <input
                    className="input-component float-input"
                    onBlur={[Function]}
                    onChange={[Function]}
                    type="text"
                    value="1"
                  />
                </div>
              </article>
              <article
                className="inspector-item wonder-float-input"
              >
                <div
                  className="item-header component-label"
                  onMouseDown={[Function]}
                  onMouseMove={[Function]}
                  onMouseUp={[Function]}
                >
                  Z
                </div>
                <div
                  className="item-content"
                >
                  <input
                    className="input-component float-input"
                    onBlur={[Function]}
                    onChange={[Function]}
                    type="text"
                    value="1"
                  />
                </div>
              </article>
            </article>
          </div>
        </div>
      </article>
    </article>
    <article
      className="wonder-addable-component"
    >
      <div
        className="addable-component-content"
      >
        <div
          className="content-btn"
        >
          <button
            className="addable-btn"
            onClick={[Function]}
          >
            Add Component
          </button>
        </div>
      </div>
    </article>
  </article>
</article>
`;
